--- a/Unreal_Engine6/mainwindow.ui
+++ b/Unreal_Engine6/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="GameGUI" name="openGLWidget">
+   <widget class="GameGUI" name="gameGUI">
     <property name="geometry">
      <rect>
       <x>10</x>
