--- a/Unreal_Engine6/mainwindow.ui
+++ b/Unreal_Engine6/mainwindow.ui
@@ -41,7 +41,7 @@
      <rect>
       <x>3</x>
       <y>0</y>
-      <width>1561</width>
+      <width>1651</width>
       <height>721</height>
      </rect>
     </property>
@@ -114,7 +114,7 @@
       </spacer>
      </item>
      <item row="3" column="4">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="indicPart">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -193,7 +193,7 @@
       </spacer>
      </item>
      <item row="0" column="2">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="score">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -271,7 +271,7 @@ color: black;</string>
      <x>0</x>
      <y>0</y>
      <width>1651</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
