--- a/Unreal_Engine6/windowpart1.ui
+++ b/Unreal_Engine6/windowpart1.ui
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <author/>
+ <comment/>
+ <exportmacro/>
+ <class>WindowPart1</class>
+ <widget class="QMainWindow" name="WindowPart1">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -280,7 +282,7 @@ color: black;</string>
   <customwidget>
    <class>GameGUI</class>
    <extends>QOpenGLWidget</extends>
-   <header>gamegui.h</header>
+   <header>scene1/gamegui.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
