--- a/Unreal_Engine6/menu/windowmainmenu.ui
+++ b/Unreal_Engine6/menu/windowmainmenu.ui
@@ -183,6 +183,36 @@ font-weight: bold;</string>
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Laurianna FERRA&lt;/p&gt;&lt;p&gt;Clément BOURLET&lt;/p&gt;&lt;p&gt;Mathis RONZON&lt;/p&gt;&lt;p&gt;Xavier PALIX&lt;/p&gt;&lt;p&gt;Léna HERAU&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="phase3Button">
+    <property name="geometry">
+     <rect>
+      <x>272</x>
+      <y>410</y>
+      <width>256</width>
+      <height>64</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;
+font-size: 24px;
+background-color: #404040;
+border-radius: 6px;
+border: 1px solid #707070;
+background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0  #404040, stop:1 #505050);</string>
+    </property>
+    <property name="text">
+     <string>Phase 3 - RigidBody</string>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
