--- a/Unreal_Engine6/scene3/windowpart3.ui
+++ b/Unreal_Engine6/scene3/windowpart3.ui
@@ -17,10 +17,10 @@
    <widget class="QOpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>-31</x>
-      <y>-11</y>
-      <width>831</width>
-      <height>561</height>
+      <x>150</x>
+      <y>270</y>
+      <width>300</width>
+      <height>200</height>
      </rect>
     </property>
    </widget>
@@ -35,7 +35,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <resources/>
  <connections/>
