--- a/Unreal_Engine6/scene3/windowpart3.ui
+++ b/Unreal_Engine6/scene3/windowpart3.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="GameGUI3" name="openGLWidget">
+   <widget class="GameGUI3" name="gameGui3">
     <property name="geometry">
      <rect>
       <x>0</x>
