--- a/Unreal_Engine6/scene4/windowpart4.ui
+++ b/Unreal_Engine6/scene4/windowpart4.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>Windowpart4</class>
+ <widget class="QMainWindow" name="Windowpart4">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -20,7 +20,7 @@
       <x>-1</x>
       <y>-1</y>
       <width>801</width>
-      <height>421</height>
+      <height>571</height>
      </rect>
     </property>
    </widget>
